# ARTS

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  counter.cfg  counter.cluster-test.cfg  counter.profile-artsid-only.cfg  counter.profile-deep.cfg  counter.profile-none.cfg  counter.profile-overhead.cfg  counter.profile-timing.cfg  introsp.cfg
benchmark/: CMakeLists.txt
benchmark/nqueen/: Makefile  arts.cfg  arts.insp  gdb_backtrace.txt  gdb_commands.txt  nqueen_arts_explicit  nqueen_arts_local  nqueen_arts_local.c  nqueen_arts_random  nqueen_arts_random.c  nqueen_omp.c  nqueen_seq.c  run.sh  run_with_gdb.sh
benchmark/nqueen/counter/: n0.json  n1.json  n10.json  n11.json  n12.json  n13.json  n14.json  n15.json  n2.json  n3.json  n4.json  n5.json  n6.json  n7.json  n8.json  n9.json
cmake/: ARTSConfig.cmake.in  FindHwloc.cmake  FindcuBlas.cmake  FindcudaArch.cmake  glibc.cmake
core/: CMakeLists.txt
core/inc/: arts.h  artsCounter.h  artsEventFunctions.h  artsGlobals.h  artsIntrospection.h  artsOutOfOrder.h  artsOutOfOrderList.h  artsRT.h  artsRemoteFunctions.h  artsRemoteProtocol.h  artsRouteTable.h  artsRuntime.h
core/inc/arts/: arts.h
core/inc/arts/gas/: Guid.h  OutOfOrder.h  OutOfOrderList.h  RouteTable.h
core/inc/arts/gpu/: GpuLCSyncFunctions.cuh  GpuLCSyncFunctions.h  GpuRouteTable.h  GpuRuntime.cuh  GpuRuntime.h  GpuStream.h  GpuStreamBuffer.h
core/inc/arts/introspection/: ArtsIdCounter.h  CMakeLists.txt  Counter.h  Introspection.h  JsonWriter.h  Metrics.h
core/inc/arts/network/: Connection.h  Remote.h  RemoteLauncher.h  RemoteProtocol.h  Server.h  SocketServer.h
core/inc/arts/runtime/: Globals.h  RT.h  Runtime.h
core/inc/arts/runtime/compute/: EdtFunctions.h  ShadAdapter.h
core/inc/arts/runtime/memory/: ArrayDb.h  DbFunctions.h  DbList.h  TwinDiff.h
core/inc/arts/runtime/network/: RemoteFunctions.h
core/inc/arts/runtime/sync/: EventFunctions.h  TerminationDetection.h
core/inc/arts/system/: AbstractMachineModel.h  ArtsPrint.h  Config.h  Debug.h  TMT.h  TMTLite.h  Threads.h
core/inc/arts/utils/: ArrayList.h  Atomics.h  Deque.h  LinkList.h  MpscQueue.h  Queue.h
core/src/: CMakeLists.txt  artsUtil.c  main.c  stubs.c
core/src/common/: artsLinkList.c
core/src/gas/: CMakeLists.txt  Guid.c  OutOfOrder.c  OutOfOrderList.c  RouteTable.c  artsGuid.c  artsOutOfOrder.c  artsOutOfOrderList.c  artsRouteTable.c
core/src/gpu/: CMakeLists.txt  GpuLCSyncFunctions.c  GpuLCSyncFunctions.cu  GpuRouteTable.c  GpuRouteTable.cu  GpuRuntime.c  GpuRuntime.cu  GpuStream.c  GpuStream.cu  GpuStreamBuffer.c  GpuStreamBuffer.cu
core/src/introspection/: ArtsIdCounter.c  ArtsIdExport.c  CMakeLists.txt  Counter.c  Introspection.c  IntrospectionStub.c  JsonWriter.c  Metrics.c
core/src/network/: CMakeLists.txt  RemoteLauncherSSH.c  RemoteProtocol.c  Socket.c  SocketServer.c  artsRemoteProtocol.c  artsSocketServer.c
core/src/other/: SmartDb.c  SmartDb.h  artsSmartDb.h
core/src/runtime/: CMakeLists.txt  Runtime.c  Server.c  artsArrayDb.c  artsDbFunctions.c  artsEdtFunctions.c  artsEventFunctions.c  artsRemoteFunctions.c  artsRuntime.c  artsServer.c  artsTerminationDetection.c  shadAdapter.c
core/src/runtime/compute/: CMakeLists.txt  EdtFunctions.c  ShadAdapter.c
core/src/runtime/memory/: ArrayDb.c  CMakeLists.txt  DbFunctions.c  DbList.c  SmartDbFunctions.c  TwinDiff.c
core/src/runtime/network/: CMakeLists.txt  RemoteFunctions.c
core/src/runtime/sync/: CMakeLists.txt  EventFunctions.c  TerminationDetection.c
core/src/system/: AbstractMachineModel.c  CMakeLists.txt  Config.c  DebugFunctions.c  PthreadLayer.c  TMT.c  TMTLite.c  artsAtomics.c  artsDebugFunctions.c  artsMallocStandard.c  artsPrintf.c  artsTMTLite.c
core/src/utils/: ArrayList.c  Atomics.c  CMakeLists.txt  ChaseLevDequePriority.c  ChaseLevDequeSimple.c  LinkList.c  MallocStandard.c  MpscQueue.c  Printf.c  Queue.c  Timer.c  Util.c  chaseLevDequeSimple.c
example/: CMakeLists.txt
example/cpu/: CMakeLists.txt  bfs.c  fib.c  fibContextSwitch.c  fibYield.c  graphSearch.c  scanStatistics.cpp  simpleReduction.c  triangleCount.c  triangleCount2.c  triangleCountPromise.c
example/gpu/: CMakeLists.txt  fibGpu.cu
example/gpu/bfs/: CMakeLists.txt  bfs.cu  bfsDefs.h  bfsHybrid.cu  bfsHybridBuffer.cu  bins.c  bins.h  buffer.c  buffer.h  graphUtil.cu  graphUtil.cuh  graphUtil.h
example/gpu/histogram/: CMakeLists.txt  histo.cu
example/gpu/mm/: CMakeLists.txt  mmThrust.cu  mmTile.cu  mmTileBlas.cu  mmTileNaive.cu  mmTileRed.cu  mmTileRedBig.cu  mmUtil.c  mmUtil.h
example/gpu/randomAccess/: CMakeLists.txt  randomAccess.cu  randomAccessDefs.h
example/gpu/stream/: CMakeLists.txt  stream.cu  streamUtil.c  streamUtil.h
graph/: CMakeLists.txt
graph/inc/arts/: BlockDistribution.h  Csr.h  EdgeVector.h  Graph.h  GraphDefs.h
graph/src/: CMakeLists.txt
graph/src/datastructures/: CMakeLists.txt  Csr.c  EdgeVector.c
graph/src/distribution/: BlockDistribution.c  CMakeLists.txt
sampleConfigs/: CMakeLists.txt  arts.cfg  artsGpu.cfg  generateConfigFiles.py
scripts/: analysis.ipynb
test/: CMakeLists.txt  README_ARTSID_TEST.md  testAcquireMode.c  testActiveMessageBuffer.c  testActiveMessageDb.c  testArrayDb.c  testArtsId.c  testArtsSend.c  testAtomicAddInArrayDb.c  testAtomicCompareAndSwapInArrayDb.c  testBuffer.c  testCDAG.c  testCDAG2.c  testCSR.c  testDbMove.c  testDbOnce.c  testDistribution.c  testEpochForShad.c  testEpochPool.c  testEvent.c  testForEach.c  testGetFromDb.c  testGpuForAll.c  testGpuForAll.cu  testGpuLCRed.c  testGpuLCRed.cu  testGpuLib.cu  testGpuRing.cu  testGpuStream.c  testGpuStream.cu  testLCSync.c  testLCSync.cu  testMain.c  testOOBug.c  testOOList.c  testPinDB.c  testPutArrayDbEpoch.c  testPutArrayDbEpoch2.c  testPutInDb.c  testRecEpoch.c  (+9 more)
testbed/nqueen/: Makefile  arts.cfg  nqueen_arts_explicit.c  nqueen_arts_seq.c  nqueen_omp_opt.c
